<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    style="@style/NavPage">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >

		<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/target_scene"/>
		
		<RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <RadioButton android:id="@+id/target_scene_session"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_session"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/target_scene_timeline"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_timeline"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/target_scene_favorite"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/grey"
		        android:text="@string/target_scene_favorite"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>

	    <Button
	        android:id="@+id/send_text"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_text"/>
	    
	    <Button
	        android:id="@+id/send_img"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_img"/>
	    
	    <Button
	        android:id="@+id/send_music"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_music"/>
	    
	    <Button
	        android:id="@+id/send_video"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_video"/>
	    
	    <Button
	        android:id="@+id/send_webpage"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/send_webpage"/>

	    <Button
	        android:id="@+id/get_token"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/get_token_from_weixin"/>

		<Button
			android:id="@+id/get_info"
			style="@style/MMLineActionButton"
			android:layout_margin="10dp"
			android:text="@string/get_userInfo_from_weixin"/>
	    
	    <Button
	        android:id="@+id/unregister"
	        style="@style/MMLineActionButton"
	        android:layout_margin="10dp"
	        android:text="@string/unregister_from_weixin"/>
	    
	</LinearLayout>
</ScrollView>